# redditbg.rs

./: .gitattributes  .gitignore  Cargo.toml  justfile  readme.md  rustfmt.toml
src/: background.rs  fetcher.rs  main.rs  persistent_set.sql  picker.rs  picker.sql  platform.rs  reddit.rs  utils.rs
src/fetcher/: imgur.rs  mod.rs  reddit_gallery.rs
