[package]
name = "redditbg"
version = "5.0.0"
authors = ["PurpleMyst <PurpleMyst@users.noreply.github.com>"]
edition = "2018"
include = ["src/**/*", "readme.md"]
publish = false

[package.metadata.release]
pre-release-commit-message = "chore(release): version {{version}}"

[dependencies]
bytes = "1.4.0"
directories = { version = "2.0.0", package = "directories-next" }
exponential-backoff = "1.2.0"
futures = "0.3.28"
futures-retry = "0.6.0"
image = "0.24.6"
noisy_float = "0.2.0"
reqwest = { version = "0.11.18", features = ["json", "stream"] }
serde_json = "1.0.96"
systray = "0.4.0"
tempfile = "3.5.0"
tokio = { version = "1.28.2", features = ["macros", "time", "fs", "io-util", "rt", "rt-multi-thread", "parking_lot"] }
tokio-stream = { version = "0.1.14", features = ["fs"] }
slog-bunyan = "2.4.0"
file-rotator = "0.6.2"
eyre = "0.6.8"
tracing = { version = "0.1.37", features = ["max_level_trace", "release_max_level_debug"] }
tracing-bunyan-formatter = "0.3.7"
tracing-subscriber = "0.3.17"
scraper = "0.16.0"
serde = { version = "1.0.163", features = ["derive"] }
async-recursion = "1.0.4"
rusqlite = { version = "0.28.0", features = ["bundled"] }
deadpool-sqlite = "0.5.0"
once_cell = "1.18.0"
base64 = "0.21.2"
image_hasher = "1.2.0"
tracing-unwrap = "0.10.0"
thiserror = "1.0.40"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"
winrt-notification = "0.5.1"
