[package]
name = "redditbg"
version = "5.1.0"
authors = ["PurpleMyst <PurpleMyst@users.noreply.github.com>"]
edition = "2018"
include = ["src/**/*", "readme.md"]
publish = false

[package.metadata.release]
pre-release-commit-message = "chore(release): version {{version}}"

[dependencies]
bytes = "1.5.0"
directories = { version = "2.0.0", package = "directories-next" }
exponential-backoff = "1.2.0"
futures = "0.3.30"
futures-retry = "0.6.0"
image = "0.24.8"
noisy_float = "0.2.0"
reqwest = { version = "0.11.23", features = ["json", "stream"] }
serde_json = "1.0.111"
systray = "0.4.0"
tempfile = "3.9.0"
tokio = { version = "1.35.1", features = ["macros", "time", "fs", "io-util", "rt", "rt-multi-thread", "parking_lot"] }
tokio-stream = { version = "0.1.14", features = ["fs"] }
slog-bunyan = "2.5.0"
file-rotator = "0.6.2"
eyre = "0.6.11"
tracing = { version = "0.1.40", features = ["max_level_trace", "release_max_level_debug"] }
tracing-bunyan-formatter = "0.3.9"
tracing-subscriber = "0.3.18"
scraper = "0.18.1"
serde = { version = "1.0.195", features = ["derive"] }
async-recursion = "1.0.5"
rusqlite = { version = "0.30.0", features = ["bundled"] }
deadpool-sqlite = "0.7.0"
once_cell = "1.19.0"
base64 = "0.21.7"
image_hasher = "1.2.0"
tracing-unwrap = "0.10.0"
thiserror = "1.0.56"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"
winrt-notification = "0.5.1"
