[package]
name = "redditbg"
version = "5.1.0"
authors = ["PurpleMyst <PurpleMyst@users.noreply.github.com>"]
edition = "2018"
include = ["src/**/*", "readme.md"]
publish = false

[package.metadata.release]
pre-release-commit-message = "chore(release): version {{version}}"

[dependencies]
bytes = "1.10.1"
directories = { version = "2.0.0", package = "directories-next" }
exponential-backoff = "2.1.0"
futures = "0.3.31"
futures-retry = "0.6.0"
image = "0.25.6"
noisy_float = "0.2.0"
reqwest = { version = "0.12.23", features = ["json", "stream"] }
serde_json = "1.0.143"
systray = "0.4.0"
tempfile = "3.21.0"
tokio = { version = "1.47.1", features = ["macros", "time", "fs", "io-util", "rt", "rt-multi-thread", "parking_lot"] }
tokio-stream = { version = "0.1.17", features = ["fs"] }
slog-bunyan = "2.5.0"
file-rotator = "0.6.2"
eyre = "0.6.12"
tracing = { version = "0.1.41", features = ["max_level_trace", "release_max_level_debug"] }
tracing-bunyan-formatter = "0.3.10"
tracing-subscriber = "0.3.19"
scraper = "0.24.0"
serde = { version = "1.0.219", features = ["derive"] }
async-recursion = "1.1.1"
rusqlite = { version = "0.37.0", features = ["bundled"] }
deadpool-sqlite = "0.12.1"
once_cell = "1.21.3"
base64 = "0.22.1"
image_hasher = "3.0.0"
tracing-unwrap = "1.0.1"
thiserror = "2.0.16"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"
winrt-notification = "0.5.1"
